# storage_in_libraries

example_1/: Cargo.toml  Forc.toml
example_1/src/: main.sw  ownable.sw  utils.sw
example_1/tests/: harness.rs
