[package]
name = "test1"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Mohammad Fawaz <mohammadfawaz89@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.25", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
